fixes small issue where focus outline is cut off in accordion lists

--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -16,6 +16,7 @@
 
 :focus {
 	outline: 5px solid transparentize($blue, .5);
+	outline: 5px solid transparentize($blue, .5);
 }
 
 /*
@@ -1457,6 +1458,10 @@ a.offscreen:focus, a.offscreen:active, a.offscreen:hover {
 	max-height: 100em;
 	visibility: visible;
 	transition-delay: 0s;
+
+	ul {
+		padding-top: 5px;
+	}
 }
 
 .accordion__panel[aria-hidden=true] {
